--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
-/*
 *{
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
 }
-*/
-#container{
+#container {
   width: 84%;
   max-width: 1280px;
   min-width: 512px;
@@ -14,63 +12,66 @@
 }
 
 header {
-   position:relative;
-   height: 8rem;
-    background: red;;
-   box-shadow: 0 4px 0.3125rem rgba(0,0,0,.3);
- }
-
-  header h1{
-    position: absolute;
-    top: 3rem;
-    left: 3rem;
-    font-size: 2rem;
-    color: yellow;  }
-
-nav {
-  padding: 1rem 3rem ;
-   background: red;
+  position: relative;
+  height: 8rem;
+  background: #660000;
+  ;
+  box-shadow: 0 4px 0.3125rem rgba(0, 0, 0, .3);
 }
 
-  nav ul{
-    display: flex;
-    flex-direction: row;
-  }
+header h1 {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  font-size: 2rem;
+  color: Wheat;
+}
 
-  nav ul li{
-    margin-right: 2rem;
-  }
+nav {
+  padding: 1rem 3rem;
+  background: #003300	;
+}
 
-  nav ul li a {
-    color: yellow;
-  }
-
-main{
+nav ul {
   display: flex;
   flex-direction: row;
 }
 
-  section{
-    flex: 3;
-    padding: 3rem;
-    background: #EEE;
-  }
+nav ul li {
+  margin-right: 2rem;
+}
 
-    article{
-      min-height: 8rem;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      background: #FFF;
-    }
+nav ul li a {
+  color:DarkGoldenrod;
+}
 
-  aside{
-    flex: 1;
-    padding: 3rem;
-    background: #DDD;
-  }
+main {
+  display: flex;
+flex-direction:row-reverse;}
+
+section {
+  flex: 5;
+  padding: 3rem;
+  background: Black;
+}
+
+article {
+  min-height: 8rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  background: Tan;
+}
+
+aside {
+  flex: 0.5;
+  padding: 0.5rem;
+  background: #996633	;
+}
 
 footer {
   padding: 2rem 3rem;
   text-align: center;
-   background: red;;
-  color: yellow;}
+  background: #660000;
+  ;
+  color: Wheat;
+}
