--- a/style.css
+++ b/style.css
@@ -63,9 +63,11 @@ article {
   margin-bottom: 2rem;
   background: Tan;
 }
-article img{
-    width:75%;
+
+article img {
+  width: 75%;
 }
+
 aside {
   flex: 0.5;
   padding: 0.5rem;
@@ -81,18 +83,18 @@ footer {
 }
 
 /* YouTube 動画　をフレキシブルにするための CSS */
-
 .youtube {
-     position: relative;
-     padding-bottom: 56.25%; /* 16:9の場合*/
-     height: 0;
-     overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9の場合*/
+  height: 0;
+  overflow: hidden;
 }
 
 .youtube iframe {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
